# Nopileos

./: .gitignore  Cargo.toml  README.md
src/: main.rs  player.rs  position.rs
src/common/: atoany.rs  mod.rs  position.rs  triangle.rs  vector2.rs
src/engine/: event_handler.rs  game_window.rs  gui_windows.rs  mod.rs
src/entities/: command.rs  entity.rs  mod.rs  ship.rs  station.rs
src/galaxy/: mod.rs  sector.rs
src/gui/: about.rs  menu_bar.rs  mod.rs  player_info.rs  sector_map.rs  ship_commander.rs  ship_inspector.rs  station_inspector.rs
src/wares/: mod.rs  wares.rs
